# Libcall

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
include/: config.hpp  config_to_vec.hpp  dividecode.hpp  help.hpp  read_config_txt.hpp  targetcode.hpp  targetutil.hpp
src/: config.cpp  dividecode.cpp  help.cpp  read_config_txt.cpp  targetutil.cpp
